Memory boost to hopefully fix Jenkins failures